--- a/page_accueil.html
+++ b/page_accueil.html
@@ -7,7 +7,29 @@
 	<title>Cartoon Parc</title>
 </head>
 <body>
-	<div class = "header"><img src="logo.gif"></div>
+	<div class = "header">
+		<img src="logo.gif">
+		<ul id ="menu">
+                <li class="liste"><a href ="">3 - 7ans</a>
+                    <ul>
+                        <li><a href ="">Dessin animé </a></li>
+                        <li><a href =""> Anime</a></li>
+                    </ul>
+                </li>
+                <li class="liste"><a href =""> 7 - 12ans</a>
+                    <ul>
+                        <li><a href ="">Dessin animé </a></li>
+                        <li><a href =""> Anime</a></li>
+                    </ul>
+                </li>
+                <li class="liste"><a href="">12 - 16ans</a>
+                	<ul>
+                		<li><a href ="">Dessin animé </a></li>
+                        <li><a href =""> Anime</a></li>
+                	</ul>
+                </li>
+            </ul>
+	</div>
 	<div class = "container"><img src="background.png"></div>
 </body>
 </html>
