--- a/dessin_animee.html
+++ b/dessin_animee.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>Cartoon Parc</title>
+	<link rel="stylesheet" type="text/css" href="style_dessin_animee.css">
+	<title>Dessin Animée 3-7 ans</title>
 </head>
 <header>
     <a href="page_accueil.html"><img id="logo" src="logo.gif"></a>
@@ -30,8 +30,11 @@
             </ul>
 </header>
 <body>
-    <h1>Bienvenu sur Cartoon Parc !</h1>
-    <h2>Viens donner ton avis sur les meilleures dessins-animés du moment</h2>
+    <h1>Dessin animée</h1>
+    <div class= film>
+ 	<img class="affiche" src="toy_story.png"><br>
+ 	<img class="affiche" src="le_roi_lion.png">
+ 	</div>
 </body>
 <footer><a href="a_propos.html"><p>A propos</p></a></footer>
 </html>
