--- a/a_propos.html
+++ b/a_propos.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>Cartoon Parc</title>
+	<title>A propos</title>
+	<link rel="stylesheet" type="text/css" href="style_propos.css">
 </head>
 <header>
     <a href="page_accueil.html"><img id="logo" src="logo.gif"></a>
@@ -30,8 +30,8 @@
             </ul>
 </header>
 <body>
-    <h1>Bienvenu sur Cartoon Parc !</h1>
-    <h2>Viens donner ton avis sur les meilleures dessins-animés du moment</h2>
+    <h1>A propos</h1><br>
+    <p class="paragraphe">L'objectif de ce site est d'offrir la possibilité aux parents de donner des avis sur divers dessins-animés ou animé categorisé selon les âges.</p>
 </body>
 <footer><a href="a_propos.html"><p>A propos</p></a></footer>
 </html>
