--- a/dessin_animee_7_12.html
+++ b/dessin_animee_7_12.html
@@ -7,7 +7,7 @@
 	<title>Dessin Animée 7-12 ans</title>
 </head>
 <header>
-    <a href="Page_d'accueil.html"><img id="logo" src="logo.gif"></a>
+    <a href="page_accueil.html"><img id="logo" src="logo.gif"></a>
         <ul id ="menu">
                 <li class="liste"><a href ="">3 - 7ans</a>
                     <ul>
