--- a/dessin_animee_7_12.html
+++ b/dessin_animee_7_12.html
@@ -33,7 +33,7 @@
     <h1>Dessin animée</h1>
     <div class= film>
  	<img class="affiche" src="hercule.jpg"><br>
- 	<img class="affiche" src="sonic.jpg">
+ 	<img class="affiche" src="dragon.jpg">
  	</div>
 </body>
 <footer><a href="a_propos.html"><p>A propos</p></a></footer>
