--- a/dessin_animee.html
+++ b/dessin_animee.html
@@ -17,7 +17,7 @@
                 </li>
                 <li class="liste"><a href =""> 7 - 12ans</a>
                     <ul>
-                        <li><a href ="dessin_animee_7_12.html">Dessin animé </a></li>
+                        <li><a href ="">Dessin animé </a></li>
                         <li><a href =""> Anime</a></li>
                     </ul>
                 </li>
@@ -32,9 +32,19 @@
 <body>
     <h1>Dessin animée</h1>
     <div class= film>
- 	<img class="affiche" src="toy_story.png"><br>
- 	<img class="affiche" src="le_roi_lion.png">
- 	</div>
+        <img class="affiche" src="toy_story.png">
+        <div id="synopsis">
+            Quand le jeune Andy quitte sa chambre, ses jouets se mettent à mener leur propre vie sous la houlette de son pantin préféré, Woody le cow-boy. Andy ignore également que chaque anniversaire est une source d'angoisse pour ses jouets qui paniquent à l'idée d'être supplantés par un nouveau venu -- ce qui arrive quand Buzz l'Éclair est offert à Andy. Cet intrépide aventurier de l'espace, venu d'une lointaine galaxie, va semer la zizanie dans ce petit monde.
+        </div>
+        <button>Faire un commentaire</button>
+    </div>
+    <div class= film>
+        <img class="affiche" src="le_roi_lion.png">
+        <div id="synopsis">
+            Un lionceau nommé Simba est exilé de son royaume après avoir été accusé d'être responsable de la mort de son père, Mufasa. Avec l'aide d'un étrange duo composé d'un suricate et d'un phacochère, il décide de reprendre ce qui lui revient de droit lorsqu'il apprend qu'il est destiné à être roi.
+      </div>
+      <button>Faire un commentaire</button>
+  </div>
 </body>
 <footer><a href="a_propos.html"><p>A propos</p></a></footer>
 </html>
